--- a/app/src/main/res/layout/activity_paste_link.xml
+++ b/app/src/main/res/layout/activity_paste_link.xml
@@ -20,6 +20,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:src="@drawable/baseline_arrow_back_24" />
 
         <TextView
@@ -62,7 +63,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
