--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -46,6 +46,7 @@
              android:src="@drawable/language" />
 
          <ImageView
+             android:id="@+id/previewCopy"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentEnd="true"
