--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -45,6 +45,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/copyResult"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
