--- a/app/src/main/res/layout/activity_summarize.xml
+++ b/app/src/main/res/layout/activity_summarize.xml
@@ -125,6 +125,7 @@
                 android:textStyle="bold" />
 
             <ImageView
+                android:id="@+id/copySummarizeIV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
