--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -87,6 +87,7 @@
           app:layout_constraintTop_toBottomOf="@+id/viewpager">
 
          <Button
+             android:id="@+id/cancelBtn"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="start"
