--- a/app/src/main/res/layout/activity_text_scanner_translate.xml
+++ b/app/src/main/res/layout/activity_text_scanner_translate.xml
@@ -38,6 +38,7 @@
             app:layout_constraintVertical_bias="0.101">
 
             <ImageView
+                android:id="@+id/btnBack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
