--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@color/blue"
         android:layout_height="match_parent"
+        android:background="@color/blue"
         tools:context=".ui.signup.SignUpActivity">
 
         <TextView
@@ -17,8 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
-            android:text="Sign Up"
             android:gravity="center"
+            android:text="Sign Up"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -42,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="30dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,8 +62,8 @@
                         android:id="@+id/tvName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Name"
                         android:layout_marginBottom="10dp"
+                        android:text="Name"
                         android:textColor="@color/white"
                         android:textSize="15sp" />
 
@@ -73,11 +72,11 @@
                         android:id="@+id/etFName"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@color/white"
                         android:ems="10"
                         android:hint="Enter uour Name"
                         android:inputType="text"
                         android:maxLines="1"
-                        android:background="@color/white"
                         android:padding="12dp"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
@@ -98,9 +97,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
                 android:maxLines="1"
                 android:text="Email"
-                android:layout_marginBottom="10dp"
                 android:textColor="#FFFDFD"
                 android:textSize="15sp" />
 
@@ -110,8 +109,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:ems="10"
                 android:background="@color/white"
+                android:ems="10"
                 android:hint="Enter your email"
                 android:inputType="text"
                 android:maxLines="1"
@@ -124,8 +123,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Mobile Number"
                 android:layout_marginBottom="10dp"
+                android:text="Mobile Number"
 
                 android:textColor="#FFFDFD"
                 android:textSize="15sp" />
@@ -137,18 +136,18 @@
 
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:layout_weight="1"
                     android:id="@+id/etMobile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:layout_weight="1"
                     android:background="@color/white"
                     android:ems="10"
-                    android:inputType="number"
                     android:hint="Enter your phone number"
+                    android:inputType="number"
+                    android:maxLength="10"
                     android:maxLines="1"
                     android:padding="12dp"
-                    android:maxLength="10"
                     android:textColor="@color/black"
                     android:textSize="18sp" />
 
@@ -159,8 +158,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Password"
                 android:layout_marginBottom="10dp"
+                android:text="Password"
                 android:textColor="#FFFDFD"
                 android:textSize="15sp" />
 
@@ -175,9 +174,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:background="@color/white"
                     android:drawableStart="@drawable/baseline_lock_24"
                     android:ems="10"
-                    android:background="@color/white"
                     android:hint="Enter your password"
                     android:inputType="textPassword"
                     android:maxLines="1"
@@ -192,11 +191,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="35dp"
+                android:background="@drawable/custom_button"
+                android:backgroundTint="@color/skyblue"
                 android:padding="10dp"
                 android:text="Sign Up"
                 android:textAllCaps="false"
-                android:background="@drawable/custom_button"
-                android:backgroundTint="@color/skyblue"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -272,10 +271,8 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
