--- a/app/src/main/res/layout/activity_upload_signature.xml
+++ b/app/src/main/res/layout/activity_upload_signature.xml
@@ -18,8 +18,8 @@
             android:id="@+id/constraintLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="10dp"
             android:background="@color/blue"
+            android:paddingVertical="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -37,8 +37,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Create a signature"
-                android:textStyle="bold"
                 android:textColor="@color/white"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -51,8 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginHorizontal="20dp"
-            android:background="@color/white"
             android:layout_marginTop="20dp"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,11 +87,12 @@
             android:id="@+id/sigIV"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_margin="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
+
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/upSignatureCL" />
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
 
         <LinearLayout
             android:id="@+id/linearLayout7"
